--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <h2>
           Guesses Left
       </h2>
+      <h3 class="guessLeft"></h3>
     </div>
     <div class="wordDisplay">
       Word will show here
@@ -33,8 +34,8 @@
   $('document').ready(() => {
     // let e = $('.gameDisplay').keydown();
     $('.scoreboard').append(`<h2 class="winCount"> ${winsCount} - ${gamesCount}</h2>`)
-    $('.guesses').append(`<h3>${guessCount}</h3>`)
-    $('.genButton').click(() => {genWord()})
+    $('.guessLeft').text(guessCount);
+    $('.genButton').click(() => {genWord()});
     $('.choices').click((e) => {
       let letter = $(e.target).text();
       letterGuess(letter);
