"adding css to project"

--- a/index.html
+++ b/index.html
@@ -7,28 +7,38 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
   <script src="./index.js"></script>
+  <link rel="stylesheet" href="./assets/styles.css"></script>
   <title>Hangman</title>
 </head>
 <body>
-  <div class="gameDisplay">
-    <div class="scoreboard">
-      <h2>Wins - Total Games</h2>
+  <div class="game-container">
+    <div class="gameDisplay">
+      <div class="scoreboard">
+        <h2>Wins - Total Games</h2>
+      </div>
+      <div class="guesses">
+        <h2>
+            Guesses Left
+        </h2>
+        <h3 class="guessLeft"></h3>
+      </div>
+      <div class="wordDisplay">
+        Word will show here
+        <div class="display-here"></div>
+      </div>
+      <div class="choices">
+        <div class="vowel-container">
+          <ul class="vowels"></ul>
+        </div>
+        <div class="consonant-container">
+          <ul class="consonants"></ul>
+        </div>
+      </div>
     </div>
-    <div class="guesses">
-      <h2>
-          Guesses Left
-      </h2>
-      <h3 class="guessLeft"></h3>
-    </div>
-    <div class="wordDisplay">
-      Word will show here
-    </div>
-    <div class="choices">
-      <ul class="vowels"></ul>
-      <ul class="consonants"></ul>
+    <div class='button-container'>
+      <button class="genButton"> Click me to start </button>
     </div>
   </div>
-  <button class="genButton"> Click me to start </button>
 </body>
 <script>
   $('document').ready(() => {
@@ -37,8 +47,8 @@
     $('.guessLeft').text(guessCount);
     $('.genButton').click(() => {genWord()});
     $('.choices').click((e) => {
-      let letter = $(e.target).text();
-      letterGuess(letter);
+      // let letter = $(e.target).text();
+      letterGuess(e);
     });
   })
 </script>
